# cpp_descriptor_bitcast

./: CMakeLists.txt  entrypoint.sh  kernels.h  setup.py
lib/: kernel_helpers.h  kernels.cpp  kernels.h
